<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_vision_bringup</name>
  <version>1.0.0</version>
  <description>RoboMaster rm_vision bringup.</description>
  <maintainer email="20234001019@m.scnu.edu.cn">oy</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ouyyyyang/rm_fire_control</url>
  <url type="bugtracker">https://github.com/ouyyyyang/rm_fire_control/issues</url>
  <author email="20234001019@m.scnu.edu.cn">Ouyang Zhuohan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_auto_aim</depend>
  <depend>rm_serial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
